require calvad_areas, not geo_bbox
seems stupid to require all of the massive geo_bbox just to get a list
of areas, so I extracted that into its own library and just include
that now.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "async": "",
       "makedir":"",
       "date-functions": "git://github.com/jmarca/date-functions.git",
-      "geo_bbox": "git://github.com/jmarca/geo_bbox.git"
+      "calvad_areas": "git://github.com/jmarca/calvad_areas.git"
   },
     "devDependencies": {
         "should":""
